[package]
name = "clihoot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client_websocket_managemet"
path = "src/client_websocket_managemet/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-rt = "2.5.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20.1"
url = "2.4.1"
async-trait = "0.1.74"
futures = "0.3"
anyhow = "1.0.75"