[package]
name = "clihoot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "async_term"
path = "src/async_term/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-rt = "2.9.0"
anyhow = "1.0.75"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.29"
ratatui = "0.24.0"
tokio = { version = "1.34.0", features = ["full"] }

